--- a/package.json
+++ b/package.json
@@ -7,11 +7,37 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "yarn webpack --config build/webpack.config.js"
+    "build": "yarn webpack --config build/webpack.config.js",
+    "build:production": "yarn build --mode=production"
   },
-  "dependencies": {
+  "devDependencies": {
+    "babel-loader": "^8.0",
+    "cache-loader": "^1.2",
+    "clean-webpack-plugin": "^0.1.18",
+    "copy-globs-webpack-plugin": "^0.3.0",
+    "css-loader": "^1.0",
+    "eslint": "^5.7",
+    "eslint-plugin-import": "^2.13",
+    "friendly-errors-webpack-plugin": "^1.7",
+    "import-glob": "^1.5",
     "lodash": "^4.17.11",
+    "mini-css-extract-plugin": "^0.5",
+    "postcss-clean": "^1.1.0",
+    "postcss-loader": "^3.0",
+    "postcss-safe-parser": "^4.0",
+    "postcss-url": "^8.0",
+    "sass": "^1.17.0",
+    "sass-loader": "7.1",
+    "sass-resources-loader": "^1.3",
+    "style-loader": "^0.23.0",
+    "stylelint": "^9.6",
+    "stylelint-config-standard": "^18.2",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
+  },
+  "dependencies": {
+    "fibers": "^3.1.1",
+    "postcss-preset-env": "^6.5.0",
+    "tailwindcss": "^0.7.4"
   }
 }
