--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "build": "yarn webpack --config build/webpack.config.js",
-    "build:production": "yarn build --mode=production"
+    "build:production": "yarn build --mode=production",
+    "deploy": "yarn build:production && bundle exec jekyll build --incremental"
   },
   "devDependencies": {
     "babel-loader": "^8.0",
