--- a/package.json
+++ b/package.json
@@ -34,11 +34,9 @@
     "stylelint": "^9.6",
     "stylelint-config-standard": "^18.2",
     "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
-  },
-  "dependencies": {
     "fibers": "^3.1.1",
     "postcss-preset-env": "^6.5.0",
-    "tailwindcss": "^0.7.4"
+    "tailwindcss": "^0.7.4",
+    "webpack-cli": "^3.2.3"
   }
 }
