--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
     "deploy": "yarn build:production && bundle exec jekyll build --incremental"
   },
   "dependencies": {
-    "babel-loader": "^8.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
     "cache-loader": "^1.2",
     "clean-webpack-plugin": "^0.1.18",
     "copy-globs-webpack-plugin": "^0.3.0",
     "css-loader": "^1.0",
     "eslint": "^5.7",
+    "eslint-plugin-compat": "^2.7.0",
     "eslint-plugin-import": "^2.13",
+    "fibers": "^3.1.1",
     "friendly-errors-webpack-plugin": "^1.7",
     "import-glob": "^1.5",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.5",
     "postcss-clean": "^1.1.0",
     "postcss-loader": "^3.0",
+    "postcss-preset-env": "^6.5.0",
     "postcss-safe-parser": "^4.0",
     "postcss-url": "^8.0",
     "sass": "^1.17.0",
@@ -33,10 +40,9 @@
     "style-loader": "^0.23.0",
     "stylelint": "^9.6",
     "stylelint-config-standard": "^18.2",
-    "webpack": "^4.29.3",
-    "fibers": "^3.1.1",
-    "postcss-preset-env": "^6.5.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.2",
     "tailwindcss": "^0.7.4",
+    "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   }
 }
