--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "stylelint-no-unsupported-browser-features": "^3.0.2",
     "tailwindcss": "^0.7.4",
     "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-merge": "^4.2.1"
   }
 }
