--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.13",
     "fibers": "^3.1.1",
     "friendly-errors-webpack-plugin": "^1.7",
+    "glob-all": "^3.1.0",
     "import-glob": "^1.5",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.5",
@@ -34,6 +35,7 @@
     "postcss-preset-env": "^6.5.0",
     "postcss-safe-parser": "^4.0",
     "postcss-url": "^8.0",
+    "purgecss-webpack-plugin": "^1.4.0",
     "sass": "^1.17.0",
     "sass-loader": "7.1",
     "sass-resources-loader": "^1.3",
@@ -42,6 +44,7 @@
     "stylelint-config-standard": "^18.2",
     "stylelint-no-unsupported-browser-features": "^3.0.2",
     "tailwindcss": "^0.7.4",
+    "terser-webpack-plugin": "^1.2.2",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-merge": "^4.2.1"
